# ruspiro-allocator

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  build.rs  makefile
.github/workflows/: ci.yml
oom/: Cargo.toml  README.md
oom/src/: lib.rs
src/: lib.rs  memory.c  memory.rs
src/asm/aarch32/: memset.s
src/asm/aarch64/: memset.S
