[package]
name = "ruspiro-allocator"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.3" # remember to update html_root_url
description = """
Simple and lightweight heap memory allocator for Raspberry Pi baremetal environments.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-allocator/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-allocator/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "allocator", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
links = "ruspiro_allocator"
exclude = ["Makefile.toml"]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-allocator" }

[lib]

[build-dependencies]
# uncomment this if a build.rs script should be run as part of the build process
# cc = "1.0"

[dependencies]

[features]
ruspiro_pi3 = [ ]

[patch.crates-io]


