[package]
name = "ruspiro-allocator-oom"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url
description = "This is a `private` sub-crate of ruspiro-allocator that should only be used as child/dependency of id. It provides the Out-Of-Memory handler implementation for the custom allocator"
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-allocator/tree/v0.1.1"
documentation = "https://docs.rs/ruspiro-allocator/0.1.1"
edition = "2018"

[lib]

[dependencies]

[features]